--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,22 @@
             android:name=".presentation.activity.LoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
+            android:noHistory="true"
+            android:theme="@style/FullscreenTheme" >
+        </activity>
+        <activity
+            android:name=".presentation.activity.MainActivity" >
+        </activity>
+        <activity
+            android:name=".presentation.activity.SplashScreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:noHistory="true"
             android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".presentation.activity.MainActivity" >
         </activity>
     </application>
 
