--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
           package="br.unicamp.ic.timeverde.dino">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.NFC" />
+
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
 
     <application
         android:name=".DinoApplication"
@@ -28,6 +31,16 @@
             android:noHistory="true"
             android:screenOrientation="portrait"
             android:theme="@style/FullscreenTheme">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="dino"
+                    android:host="toggleDevice"/>
+
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
