--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,10 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.jakewharton:butterknife:8.0.1'
-    compile 'com.android.support:cardview-v7:23.+'
-    compile 'com.android.support:recyclerview-v7:23.+'
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.google.android.gms:play-services-gcm:9.0.2'
+    compile 'com.code-troopers.betterpickers:library:3.0.0'
 }
 
 
